crates/cosmon-cli/tests/snapshots/help__galaxies_registry_list.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
List every galaxy declared in the registry TOML.

With `--json`, emits NDJSON (one entry per line) — the shape `cs ask` and other pilot agents can pipe into `jq` without extra envelope parsing.

Usage: cs galaxies registry list [OPTIONS]

Options:
      --config <PATH>
          Path to the state directory (default: the galaxy's .cosmon/state/)

  -v, --verbose
          Enable verbose output

      --json
          Output in JSON format

  -h, --help
          Print help (see a summary with '-h')
