crates/cosmon-cli/tests/snapshots/help__harvest_authority.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Configure and inspect remote harvest authority; reset a lost root only on the host

Usage: cs harvest-authority [OPTIONS] <COMMAND>

Commands:
  configure  Select a policy or install a root; local replacement needs --local-reset
  status     Inspect effective policy, provenance, epoch and public root
  challenge  Print a canonical v1 grant and its exact bytes for an external signer
  import     Verify and atomically install an independently signed JSON grant

Options:
      --config <PATH>  Path to configuration file
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
