crates/cosmon-cli/tests/snapshots/help__harvest_authority_configure.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Select a policy or install a root; local replacement needs --local-reset

Usage: cs harvest-authority configure [OPTIONS] --policy <POLICY>

Options:
      --config <PATH>
          Path to configuration file
      --policy <POLICY>
          Disabled, scoped or sealed
      --public-key-file <PUBLIC_KEY_FILE>
          File containing a minisign public key, never its private half
  -v, --verbose
          Enable verbose output
      --epoch <EPOCH>
          New monotone revocation epoch; required for rotation
      --json
          Output in JSON format
      --local-reset
          Recover a lost current signer by resetting its root on this host
  -h, --help
          Print help
