crates/cosmon-cli/tests/snapshots/help__harvest_authority_import.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Verify and atomically install an independently signed JSON grant

Usage: cs harvest-authority import [OPTIONS] --molecule <MOLECULE> --file <FILE>

Options:
      --config <PATH>        Path to the state directory (default: the galaxy's .cosmon/state/)
      --molecule <MOLECULE>  Molecule whose current facts the grant must cover
      --file <FILE>          JSON file holding a `DoneAuthorization`
  -v, --verbose              Enable verbose output
      --json                 Output in JSON format
  -h, --help                 Print help
